+ added the initial implementation of my C structure checker code generator   tool, named h2paschk. This is currently a separate tool, that requires a   manually crafted input file with a special syntax (example is included as a   comment in the source code), that contains descriptions of all the records   that need to be checked, but it is planned to add support to h2pas to generate   these files automatically, since this would be very useful.
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41858 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -17568,6 +17568,7 @@ utils/h2pas/converu.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/h2pas/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/h2pas/h2pas.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/h2pas/h2pas.y svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+utils/h2pas/h2paschk.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/h2pas/h2paspp.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/h2pas/h2plexlib.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 utils/h2pas/h2poptions.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
