- Add support for .option directive in riscv assembler. - Use addiw when adjusting U32 to S32
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41870 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -676,6 +676,7 @@ compiler/riscv/nrvcnv.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nativ
 compiler/riscv/nrvcon.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/riscv/nrvinl.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/riscv/nrvset.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/riscv/rarvgas.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/riscv/rgcpu.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/riscv32/aoptcpu.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/riscv32/aoptcpub.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
