- Port RISC-V64 startup code to native inline routines.
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41871 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/rtl/linux/Makefile.fpc
+++ b/rtl/linux/Makefile.fpc
@@ -91,7 +91,8 @@ SYSINIT_UNITS=si_prc si_c si_g si_dll
 endif
 
 ifeq ($(ARCH),riscv64)
-override LOADERS=prt0 cprt0 dllprt0
+override LOADERS=
+SYSINIT_UNITS=si_prc si_dll si_c
 endif
 
 # mipsel reuses mips files by including so some file names exist
