Add first linux RTL compliance test file t_linux.h2paschk
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42016 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -10061,6 +10061,7 @@ rtl/linux/sysnr-gen.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/sysos.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/sysosh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/t_linux.h2paschk svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/termio.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/termios.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/termiosproc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
