Do not use BSD system tar option -I if TARPROG is gtar for OpenBSD
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42022 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2559,6 +2559,11 @@ ifneq ($(SVNVERSION),)
 	$(ECHOREDIR) svnpackagesrevision=$(SVN_PACKAGES_REV_STR) >> $(TEST_OUTPUTDIR)/dbdigest.cfg
 endif
 ifeq ($(OS_SOURCE),openbsd)
+ifeq ($(TARPROG),$(subst gtar,,$(TARPROG)))
+  BSD_SYSTEM_TAR=1
+endif
+endif
+ifdef BSD_SYSTEM_TAR
 TARFROM=-I tar.lst
 else
 TARFROM=--files-from=tar.lst
