+ add support for MultiHelpers modeswitch by Ryan Joseph for Mantis #35159 + added tests
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42026 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -13774,6 +13774,22 @@ tests/test/tmsg1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmsg2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmsg3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmsg4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tmshlp1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp10.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp11.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp12.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp13.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp14.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp15.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp16.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp3.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp4.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp5.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp6.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp7.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp8.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tmshlp9.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tmt1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmul1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tnest1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -14333,6 +14349,9 @@ tests/test/ulib2a.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/umaclocalprocparam3f.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/umacpas1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/umainnam.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/umshlp1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/umshlp15a.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/umshlp15b.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/unit3.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/units/character svnc_bugtraq_003aurl svnc_bugtraq_003alogregex
 tests/test/units/character/tgetnumericvalue.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
