+ support for verifying whether a case statements handles all possibilities     (based on patch by Martok)    o enabled by default in ISO and Extended Pascal: compile-time error if not      the case in ISO mode, warning and run-time error in Extended Pascal mode    o warning enabled by default in all other modes for boolean, enumeration and      subrange integer types with ranges different from the default ones      (i.e., different from 0..255, -128..127, 0..65536, etc)    o warnings for all ordinal types can be enabled in all modes with      -CC
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42047 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -13141,6 +13141,15 @@ tests/test/tcase6.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tcase7.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tcase8.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tcase9.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tcasecov1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov5.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov6.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov7.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov8.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tcasecov9.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tcg1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tchlp1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tchlp10.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
