- delete cprt0.as from the OpenBSD x86_64 startup code, because it's not needed for bootstrapping
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42077 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/rtl/openbsd/Makefile.fpc
+++ b/rtl/openbsd/Makefile.fpc
@@ -83,6 +83,7 @@ LOADERS=prt0 cprt0
 ifeq ($(ARCH),x86_64)
 CPU_UNITS=x86 ports cpu
 SYSINIT_UNITS=si_prc si_c si_dll si_g
+LOADERS=prt0
 endif
 ifeq ($(ARCH),i386)
 CPU_UNITS=x86 ports cpu mmx
