+ Added test object files for x86_64-haiku.
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42145 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -12175,6 +12175,13 @@ tests/test/cg/obj/haiku/i386/tcext3.o svn_mime_002dtype=application%2Foctet-stre
 tests/test/cg/obj/haiku/i386/tcext4.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/haiku/i386/tcext5.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/haiku/i386/tcext6.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/haiku/x86_64/cpptcl1.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/haiku/x86_64/cpptcl2.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/haiku/x86_64/ctest.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/haiku/x86_64/tcext3.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/haiku/x86_64/tcext4.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/haiku/x86_64/tcext5.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/haiku/x86_64/tcext6.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/aarch64/cpptcl1.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/aarch64/cpptcl2.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/aarch64/ctest.o svn_mime_002dtype=application%2Foctet-stream
