* GBA port updated
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42201 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/packages/libgbafpc/Makefile.fpc.fpcmake
+++ b/packages/libgbafpc/Makefile.fpc.fpcmake
@@ -34,4 +34,4 @@ nortl=y
 [rules]
 .NOTPARALLEL:
 core_asm$(OEXT):src/gba/core_asm.as
-        $(AS) -o $(UNITTARGETDIRPREFIX)core_asm$(OEXT) src/gba/core_asm.as
+        $(AS) src/gba/core_asm.as -o $(UNITTARGETDIRPREFIX)core_asm$(OEXT) 
