--- a/packages/libndsfpc/examples/graphics/Makefile.fpc
+++ b/packages/libndsfpc/examples/graphics/Makefile.fpc
@@ -3,7 +3,7 @@
 #
 
 [target]
-dirs=3D Backgrounds Effects Ext_Palettes Printing Sprites
+dirs=3D Backgrounds Effects Ext_Palettes grit Printing Sprites
 
 [require]
 packages=libndsfpc
