Reintegration of Custom Attributes branch by Joost van der Sluis with patches reworked by Svetozar Belic [patch 1/3]
Implemented attributes for class types and properties (based on work by Joost van der Sluis). Added TCustomAttribute - a base class for attributes. Added TUnitInfo record to RTTI. It contains the unit name and unit options (for now only a flag which specifies if the unit contains attributes). Added several tests for attributes.

git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42356 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -13275,6 +13275,16 @@ tests/test/tclass6.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tclass7.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tclass8.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tclass9.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tclassattribute1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tclassattribute10.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tclassattribute2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tclassattribute3.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tclassattribute4.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tclassattribute5.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tclassattribute6.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tclassattribute7.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tclassattribute8.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tclassattribute9.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tclassinfo1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tclrprop.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tcmov1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
