* rename custom attributes related tests to something more sensible
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@42361 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -13275,16 +13275,6 @@ tests/test/tclass6.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tclass7.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tclass8.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tclass9.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
-tests/test/tclassattribute1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
-tests/test/tclassattribute10.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
-tests/test/tclassattribute2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
-tests/test/tclassattribute3.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
-tests/test/tclassattribute4.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
-tests/test/tclassattribute5.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
-tests/test/tclassattribute6.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
-tests/test/tclassattribute7.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
-tests/test/tclassattribute8.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
-tests/test/tclassattribute9.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tclassinfo1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tclrprop.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tcmov1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -13351,6 +13341,16 @@ tests/test/tcptypedconst2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=na
 tests/test/tcptypedconst3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tcstring1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tcstring2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tcustomattr1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tcustomattr10.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tcustomattr2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tcustomattr3.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tcustomattr4.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tcustomattr5.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tcustomattr6.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tcustomattr7.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tcustomattr8.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tcustomattr9.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tdefault1.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tdefault10.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tdefault11.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
