--- a/.gitattributes
+++ b/.gitattributes
@@ -13346,6 +13346,7 @@ tests/test/tcustomattr10.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=na
 tests/test/tcustomattr11.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tcustomattr12.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tcustomattr13.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/tcustomattr14.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tcustomattr2.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tcustomattr3.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/tcustomattr4.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
@@ -14358,6 +14359,8 @@ tests/test/tx64ccnv.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/uabstrcl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/uchlp12.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/uchlp18.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/ucustomattr14a.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+tests/test/ucustomattr14b.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/udots.moredots.unit7.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/udots.moredots.unit8.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/test/udots.udots.unit4.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
